# TUI-Graphing-Calculator

./: .clang-format  .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.txt  compile_commands.json  demo  presentation.url
include/: Domain.hpp  TUI.hpp  analysis_parameters.hpp  ast.hpp  parser.hpp  tokenizer.hpp
src/: TUI.cpp  analysis_parameters.cpp  ast.cpp  main.cpp  parser.cpp  tokenizer.cpp
